kcc-UID2-532-update-operator-image Update openjdk11 to eclipse-termurin11